# table-simulator-server

./: Cargo.toml  README.md
src/: main.rs  ws.rs
web/: build.js  package-lock.json  package.json
web/public/: index.html
web/src/: app.jsx  drag.js  remote.js  store.js  ws.js
