[package]
name = "table-simulator-server"
version = "0.1.0"
authors = ["Eddie <tamamu.1e1s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-files = "0.5.0"
actix-rt = "1.1.1"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
env_logger = "0.8.2"
log = "0.4.11"
rand = "0.8.1"
serde = "1.0.118"
serde_json = "1.0.61"
